@@ -147,7 +147,6 @@ void input_poly(mpz_t N, mpz_t ** A, i32_t * adeg_ptr, mpz_t ** B,
 }
 
 #else
-#define MAX(_a, _b) ((_a)>(_b) ? (_a) : (_b))
 /*******************************************************/
 void input_poly(mpz_t N, mpz_t ** A, i32_t *adeg, mpz_t ** B,
                 i32_t *bdeg, mpz_t m, FILE *fp)
