@@ -36,12 +36,6 @@
 #include "ggnfs.h"
 #include "prand.h"
 
-
-#define MAX(_a, _b) ((_a) > (_b) ? (_a) : (_b))
-#define MIN(_a, _b) ((_a) < (_b) ? (_a) : (_b))
-
-
-
 /******************************************************/
 void poly_cp(poly_t dest, poly_t src)
 /******************************************************/
